Update PetService GetPetFeedingsAsync

--- a/DidWeFeedTheCatToday.Client/_Imports.razor
+++ b/DidWeFeedTheCatToday.Client/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using DidWeFeedTheCatToday.Client
 @using DidWeFeedTheCatToday.Client.Layout
+@using Microsoft.AspNetCore.Components.Authorization
