Add AuthorizeView in pet-feedings

--- a/DidWeFeedTheCatToday.Client/Pages/PetFeedings.razor
+++ b/DidWeFeedTheCatToday.Client/Pages/PetFeedings.razor
@@ -2,47 +2,52 @@
 @using DidWeFeedTheCatToday.Shared.DTOs.PetFeedings
 @using DidWeFeedTheCatToday.Client.Services
 @using Microsoft.AspNetCore.Authorization
-@attribute [Authorize]
 @inject PetService PetClient
 
 <PageTitle>Feeding History</PageTitle>
 
 <h1>Feeding History</h1>
-<p>This data is protected. Only logged-in users can see this.</p>
 
-@if (petFeedings == null)
-{
-    <p>Loading feeding history...</p>
-}
-else
-{
-    @foreach (var item in petFeedings)
-    {
-        <div class="card mb-3 shadow-sm">
-            <div class="card-header bg-primary text-white">
-                <h4 class="mb-0">@item.Name</h4>
-            </div>
-            <div class="card-body">
-                <h6>Recent Feedings:</h6>
-                @if (item.FeedingTimes != null && item.FeedingTimes.Any())
-                {
-                    <ul class="list-group list-group-flush">
-                        @foreach (var feeding in item.FeedingTimes)
+<AuthorizeView>
+    <NotAuthorized>
+        <p>Log in to see your pets data!</p>
+    </NotAuthorized>
+    <Authorized>
+        @if (petFeedings == null)
+        {
+            <p>Loading feeding history...</p>
+        }
+        else
+        {
+            @foreach (var item in petFeedings)
+            {
+                <div class="card mb-3 shadow-sm">
+                    <div class="card-header bg-primary text-white">
+                        <h4 class="mb-0">@item.Name</h4>
+                    </div>
+                    <div class="card-body">
+                        <h6>Recent Feedings:</h6>
+                        @if (item.FeedingTimes != null && item.FeedingTimes.Any())
                         {
-                            <li class="list-group-item">
-                                Fed at: @feeding.FeedingTime?.ToLocalTime().ToString("g")
-                            </li>
+                            <ul class="list-group list-group-flush">
+                                @foreach (var feeding in item.FeedingTimes)
+                                {
+                                    <li class="list-group-item">
+                                        Fed at: @feeding.FeedingTime?.ToLocalTime().ToString("g")
+                                    </li>
+                                }
+                            </ul>
                         }
-                    </ul>
-                }
-                else
-                {
-                    <p class="text-muted">No feedings recorded yet.</p>
-                }
-            </div>
-        </div>
-    }
-}
+                        else
+                        {
+                            <p class="text-muted">No feedings recorded yet.</p>
+                        }
+                    </div>
+                </div>
+            }
+        }
+    </Authorized>
+</AuthorizeView>
 
 
 @code 
