--- a/DidWeFeedTheCatToday.Client/Layout/NavMenu.razor
+++ b/DidWeFeedTheCatToday.Client/Layout/NavMenu.razor
@@ -4,7 +4,7 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">DidWeFeedTheCatToday.Client</a>
+        <a class="navbar-brand" href="">pet-feeding-tracker</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
