--- a/DidWeFeedTheCatToday.Client/Layout/NavMenu.razor
+++ b/DidWeFeedTheCatToday.Client/Layout/NavMenu.razor
@@ -35,6 +35,11 @@
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="add-pet">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Add pet
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
                     <NavLink class="nav-link" @onclick="HandleLogout" style="cursor:pointer">
                         <span class="bi bi-box-arrow-right" aria-hidden="true"></span> Logout
                     </NavLink>
