--- a/DidWeFeedTheCatToday.Client/Pages/Pets.razor
+++ b/DidWeFeedTheCatToday.Client/Pages/Pets.razor
@@ -27,8 +27,8 @@ else
                 <div class="card mb-4 shadow-sm">
                     <div class="card-body">
                         <h5 class="card-title">@pet.Name</h5>
-                        @if (pet.Age != null) { <p class="card-text">Age: @pet.Age</p> }
-                        else { <p class="card-text"> Age: Not specified</p> }
+                        <p class="card-text"> Age: @(pet.Age.HasValue ? pet.Age : "Not specified.")</p>
+                        <p class="card-text"> Last feeding: @(pet.LastFed.HasValue ? pet.LastFed.Value.ToLocalTime().ToString("g") : "Not fed yet.")</p>
                         <p class="text-muted">@pet.AdditionalInformation</p>
                         <div class="d-flex justify-content-between align-items-center mt-3">
                             <button class="btn btn-sm btn-success" @onclick="() => HandleFeed(pet.Id)">
